# dexdex

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  bar.txt  docker-compose.yml  foo.txt  lefthook.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json
.github/workflows/: CI.yml  claude-code-review.yml  release.yml
apps/main-server/: Cargo.toml
apps/main-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
apps/main-server/src/api/: auth.rs  badge.rs  events.rs  mod.rs  notification.rs  pr.rs  repository.rs  review.rs  secrets.rs  session.rs  subtask.rs  task.rs  todo.rs  worker.rs  workspace.rs
apps/main-server/src/broker/: mod.rs
apps/main-server/src/middleware/: auth.rs  mod.rs
apps/main-server/src/services/: auto_fix.rs  learning.rs  mod.rs  worker_registry.rs
apps/main-server/src/webhooks/: github.rs  mod.rs  types.rs
apps/tauri-app/: package.json  playwright.config.ts  vite.config.ts
apps/tauri-app/e2e/: app.spec.ts
apps/tauri-app/src/: App.tsx  index.css
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-app/src-tauri/src/: config.rs  error.rs  events.rs  lib.rs  notifications.rs  remote_client.rs  state.rs
apps/tauri-app/src-tauri/src/commands/: mobile.rs  mod.rs  mode.rs  repository.rs  secrets.rs  settings.rs  task.rs  workspace.rs
apps/tauri-app/src-tauri/src/mobile/: biometric.rs  mod.rs  notifications.rs  platform.rs
apps/tauri-app/src-tauri/src/single_process/: emitter.rs  executor.rs  mod.rs  runtime.rs  tty_handler.rs
apps/tauri-app/src/api/: client.ts  index.ts  types.ts
apps/tauri-app/src/api/__tests__/: client.test.ts
apps/tauri-app/src/api/hooks/: useEventStream.ts  useNotifications.ts  usePrManagement.ts  useRepositories.ts  useSessions.ts  useSubTasks.ts  useTasks.ts  useWorkspaces.ts
apps/tauri-app/src/components/: CommandPalette.tsx  ErrorBoundary.tsx  KeyboardShortcutsDialog.tsx
apps/tauri-app/src/components/__tests__/: CommandPalette.test.tsx  KeyboardShortcutsDialog.test.tsx  UnitTaskCard.test.tsx
apps/tauri-app/src/components/agent-message/: AgentMessageRenderer.tsx  AskUserQuestionMessage.tsx  CommandExecutionMessage.tsx  ErrorOutputMessage.tsx  FileChangeMessage.tsx  RawMessage.tsx  SessionEndMessage.tsx  SessionStartMessage.tsx  TextOutputMessage.tsx  ThinkingMessage.tsx  ToolResultMessage.tsx  ToolUseMessage.tsx  UserResponseMessage.tsx  index.ts
apps/tauri-app/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  MessageList.tsx  index.ts
apps/tauri-app/src/components/dashboard/: KanbanBoard.tsx  KanbanColumn.tsx  TaskCard.tsx  index.ts
apps/tauri-app/src/components/layout/: MainLayout.tsx  Sidebar.tsx  TabBar.tsx  index.ts
apps/tauri-app/src/components/mobile/: MobileHeader.tsx  MobileNavigation.tsx  MobileTaskCard.tsx  SwipeableCard.tsx  index.ts
apps/tauri-app/src/components/notifications/: NotificationPanel.tsx  index.ts  utils.ts
apps/tauri-app/src/components/repository-groups/: RepositoryGroupCard.tsx  RepositoryGroupDialog.tsx  index.ts
apps/tauri-app/src/components/review/: DiffViewer.tsx  InlineComment.tsx  ReviewInterface.tsx  index.ts
apps/tauri-app/src/components/task/: AgentLogViewer.tsx  PlanDecisionPanel.tsx  SessionLogViewer.tsx  SubTaskTimeline.tsx  TaskGraph.tsx  TokenUsageCard.tsx  TokenUsageDisplay.tsx  ToolEventComponents.tsx  (+2 more)
apps/tauri-app/src/hooks/: index.ts  useChatHotkey.ts  useKeyboardShortcuts.ts  useMobile.ts  useMode.ts  useNotificationEvents.ts  useNotificationPermission.ts  useRepositories.ts  useRepositoryGroups.ts  useReviewComments.ts  useReviewShortcuts.ts  useSettings.ts  useTabNavigation.ts  useTaskEvents.ts  useTaskLogs.ts  useTaskStatusEvents.ts  useTasks.ts  useTheme.ts  useTtyInput.ts  useWorkspaces.ts
apps/tauri-app/src/lib/: keyboardUtils.ts  parseDiff.ts  planYaml.ts  queryCache.ts
apps/tauri-app/src/pages/: CompositeTaskDetail.tsx  Dashboard.tsx  ModeSelection.tsx  Notifications.tsx  Onboarding.tsx  Repositories.tsx  RepositoryGroups.tsx  Settings.tsx  TaskCreation.tsx  UnitTaskDetail.tsx  WorkspaceHome.tsx  index.ts
apps/tauri-app/src/stores/: chatStore.ts  index.ts  notificationCenterStore.ts  notificationStore.ts  taskCreationStore.ts  themeStore.ts  uiStore.ts
apps/tauri-app/src/test/: setup.ts
apps/worker-server/: Cargo.toml
apps/worker-server/src/: api.rs  client.rs  config.rs  docker.rs  error.rs  executor.rs  lib.rs  main.rs  state.rs
crates/auth/: Cargo.toml
crates/auth/src/: jwt.rs  lib.rs  pkce.rs
crates/coding_agents/: Cargo.toml
crates/coding_agents/src/: error.rs  event.rs  lib.rs  runner.rs
crates/coding_agents/src/agents/: aider.rs  amp.rs  claude_code.rs  codex_cli.rs  gemini_cli.rs  mod.rs  open_code.rs  traits.rs
crates/coding_agents/src/executor/: emitter.rs  mod.rs  task_executor.rs  tty_manager.rs
crates/config/: Cargo.toml
crates/config/src/: credentials.rs  error.rs  global.rs  lib.rs  repository.rs
crates/entities/: Cargo.toml
crates/entities/src/: agent.rs  lib.rs  notification.rs  pr.rs  repository.rs  sanitize.rs  session.rs  task.rs  todo.rs  token_usage.rs  tty.rs  user.rs  workspace.rs
crates/git_ops/: Cargo.toml
crates/git_ops/src/: cache.rs  error.rs  lib.rs  patch.rs  remote.rs  repository.rs  validation.rs  worktree.rs
crates/plan_parser/: Cargo.toml
crates/plan_parser/src/: executor.rs  lib.rs  parser.rs  validator.rs
crates/rpc_protocol/: Cargo.toml
crates/rpc_protocol/proto/: delidev.proto  dexdex.proto
crates/rpc_protocol/src/: lib.rs  requests.rs  responses.rs  types.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: keychain.rs  keys.rs  lib.rs
crates/task_store/: Cargo.toml
crates/task_store/src/: lib.rs  memory.rs  sqlite.rs  traits.rs
crates/worker_impl/: Cargo.toml
crates/worker_impl/src/: error.rs  executor.rs  lib.rs  planning_prompt.rs  runtime.rs
docs/: api.md  client-local-vs-remote.md  design.md  developer-setup.md  entities.md  event-streaming.md  main-server.md  notifications.md  plan-yaml.md  pr-management.md  tauri-app.md  ui.md  user-guide.md  worker-server.md  workspace-connectivity.md
(+46 files in other folders)
