[workspace]
resolver = "2"
members = [
    "apps/main-server",
    "apps/tauri-app/src-tauri",
    "apps/worker-server",
    "crates/entities",
    "crates/rpc_protocol",
    "crates/task_store",
    "crates/auth",
    "crates/secrets",
    "crates/git_ops",
    "crates/coding_agents",
    "crates/config",
]

# Release profile optimizations
[profile.release]
# Enable Link-Time Optimization for smaller binaries
lto = true
# Use single codegen unit for better optimization
codegen-units = 1
# Strip symbols from the binary
strip = true
# Optimize for size with good performance
opt-level = "z"

# Profile for generating debug symbols (used for Sentry upload before stripping)
[profile.release-with-debug]
inherits = "release"
# Keep debug info for symbol upload
strip = false
debug = true
