[package]
name = "main-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Workspace crates
entities = { path = "../../crates/entities" }
rpc_protocol = { path = "../../crates/rpc_protocol" }
task_store = { path = "../../crates/task_store" }
auth = { path = "../../crates/auth" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# URL encoding
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
