[package]
name = "worker-server"
version = "0.1.0"
edition = "2024"
publish = false
description = "DexDex Worker Server - Polling client that executes AI coding agents"

[dependencies]
# Workspace crates
entities = { path = "../../crates/entities" }
rpc_protocol = { path = "../../crates/rpc_protocol" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
