[package]
name = "coding_agents"
version = "0.1.0"
edition = "2024"
publish = false
description = "AI coding agent abstraction and output normalization for DeliDev"

[dependencies]
# Core
entities = { path = "../entities" }
git_ops = { path = "../git_ops" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Process management
tokio-process = "0.2"

# Regex for parsing
regex = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
