[package]
name = "config"
version = "0.1.0"
edition = "2021"
publish = false
description = "Configuration management for DexDex"

[dependencies]
entities = { path = "../entities" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
dirs = "5"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
