[package]
name = "entities"
version = "0.1.0"
edition = "2024"
publish = false
description = "Core entity definitions for DexDex"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
