[package]
name = "git_ops"
version = "0.1.0"
edition = "2021"
publish = false
description = "Git operations for DeliDev"

[dependencies]
entities = { path = "../entities" }
# Using git2 without https/ssh features to avoid OpenSSL dependency for iOS cross-compilation.
# Git operations over HTTPS/SSH will use system git command instead of libgit2.
git2 = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["process"] }
tracing = "0.1"
url = "2"
fslock = "0.2"

[dev-dependencies]
tempfile = "3"
