[package]
name = "plan_parser"
version = "0.1.0"
edition = "2021"
publish = false
description = "PLAN.yaml parsing and validation for DeliDev"

[dependencies]
entities = { path = "../entities" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
