[package]
name = "rpc_protocol"
version = "0.1.0"
edition = "2024"
publish = false
description = "RPC protocol definitions for DexDex"

[dependencies]
entities = { path = "../entities" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
