[package]
name = "secrets"
version = "0.1.0"
edition = "2021"
publish = false
description = "Cross-platform keychain access for DexDex"

[dependencies]
async-trait = "0.1"
keyring = "3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
