[package]
name = "worker_impl"
version = "0.1.0"
edition = "2024"
publish = false
description = "Local worker implementation for task execution"

[dependencies]
# Core
entities = { path = "../entities" }
coding_agents = { path = "../coding_agents" }
task_store = { path = "../task_store" }
config = { path = "../config" }
git_ops = { path = "../git_ops" }

# File matching
glob = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Random
rand = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
