[package]
name = "tauri-app"
version = "0.1.0"
description = "DeliDev - AI Coding Agent Orchestrator"
authors = ["DeliDev Team"]
edition = "2021"
publish = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"

# Workspace crates
entities = { path = "../../../crates/entities" }
rpc_protocol = { path = "../../../crates/rpc_protocol" }
task_store = { path = "../../../crates/task_store" }
coding_agents = { path = "../../../crates/coding_agents" }
auth = { path = "../../../crates/auth" }
secrets = { path = "../../../crates/secrets" }
git_ops = { path = "../../../crates/git_ops" }
config = { path = "../../../crates/config" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
regex = "1"
once_cell = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dirs = "5"

# HTTP client for remote mode
# Using rustls-tls for cross-platform compatibility (avoids OpenSSL issues on iOS/mobile)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Enable devtools for debugging (should only be enabled in development).
# For development: cargo build --features devtools
# For production: cargo build --release
devtools = ["tauri/devtools"]

